feat: (3.5) add send message use case
